samples/_failures_safe/1761615857_a336fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb0c4e7a.c: In function ‘main’:
./samples/SAFE/__tmp_cb0c4e7a.c:133:25: error: missing terminating " character
  133 |         fprintf(stderr, "Data mismatch after decompression
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cb0c4e7a.c:133:9: error: expected expression at end of input
  133 |         fprintf(stderr, "Data mismatch after decompression
      |         ^~~~~~~
./samples/SAFE/__tmp_cb0c4e7a.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb0c4e7a.c:133:9: error: expected declaration or statement at end of input
